# CMake-CPlusPlus-Lib-GTest

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  Example.cpp  Example.hpp
tests/: CMakeLists.txt  lib-tester.cpp  lib-tester2.cpp
